--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,47 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 body {
-    
+    padding:0;
+    margin: 0;
 }
 
-.circle {
-  width: 200px;
-  margin: 6px 6px 20px;
-  display: inline-block;
-  position: relative;
-  text-align: center;
-  line-height: 1.2;
+
+
+.navbar {
+  color: #fff;
+  background-color: transparent;
+  transform: uppercase;
+
 }
 
-.circle canvas {
-  vertical-align: top;
-  width: 200px !important;
+.home-inner {
+  height: 100vh;
+  width:100%;
+  background-image: url("../images/night.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
 }
 
-.circle strong {
-  position: absolute;
-  top: 30px;
-  left: 0;
+.caption {
   width: 100%;
-  text-align: center;
-  line-height: 40px;
-  font-size: 30px;
-  color: black;
+  max-width: 100%;
+  position: absolute;
+  top:40%;
+  z-index: 1
 }
 
-.circle strong i {
-  font-style: normal;
-  font-size: 0.6em;
-  font-weight: normal;
+.caption h2 {
+  color:#fff;
+  font-size: 5rem;
+  
+  
 }
 
-.circle span {
-  display: block;
-  color: #aaa;
-  margin-top: 12px;
+.caption p {
+  color:#fff;
+  font-size: 2rem;
+  
 }
+
+
+
