--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,9 +75,71 @@ body {
   transform: rotate(35deg)
 }
 
-.img-thumbnail {
+.img-fluid {
+  width:100%;
+  height:20%;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   
 }
+
+#contact {
+  width: 100%;
+  height: 70vh;
+   
+  background-image: url(../images/keyboard.jpg);
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.box {
+    margin: auto
+}
+
+.card {
+    padding: 8%;
+    padding-top: 35px;
+    margin-top: 60px;
+    margin-bottom: 80px
+}
+
+textarea[name="message"] {
+    resize: none
+}
+
+#e-mail {
+    height: 45px
+}
+
+#message {
+    height: 120px
+}
+
+input.input-box,
+textarea.input-box {
+    background-color: #fff;
+    border: #616161;
+    color: #BDBDBD
+}
+
+input.input-box:focus,
+textarea.input-box:focus {
+    background-color: #F5F5F5;
+    color: #BDBDBD
+}
+
+.rm-border:focus {
+    border-color: inherit;
+    -webkit-box-shadow: none;
+    box-shadow: none
+}
+
+form .form-control::-webkit-input-placeholder {
+    color: #9E9E9E
+}
+
+::-moz-placeholder {
+    color: #9E9E9E !important
+}
+
