--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,10 +89,23 @@ body {
   background-repeat: no-repeat;
   
 }
+.project-link {
+  color:black;
+}
+.img-fluid:hover {
+  transform: translateY(-50px), translatex(-50px); 
+  box-shadow: 0 15px 35px rgba(0,0,0,0.9);
+}
+
+
+
+.project-link:hover {
+  color:grey;
+}
 
 #contact {
   width: 100%;
-  height: 70vh;
+  height: 85vh;
    
   background-image: url(../images/keyboard.jpg);
   background-position: center center;
