--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-.max-viewport{
+.max-viewport {
   min-height: 100vh;
 }
 
@@ -20,7 +20,7 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  
+
 }
 
 .naslov {
@@ -31,134 +31,107 @@ body {
   text-align: center;
 }
 
-.progress-title {
-  font-size: 16px;
-  font-weight: 700;
-  color: #fff;
-  margin: 0 0 20px;
-}
-
 .progress {
-  height: 20px;
-  background: #333;
-  border-radius: 0;
-  box-shadow: none;
-  margin-bottom: 30px;
-  overflow: visible
-}
-
-.progress-value {
-  font-size: 20px;
-  color: #fff;
-}
-
-.progress .progress-bar {
   position: relative;
-  -webkit-animation: animate-positive 2s;
-  animation: animate-positive 2s
+  height: 25px;
+  margin-bottom: 13px;
 }
 
-.progress .progress-value {
-  display: block;
-  font-size: 18px;
+.progress-type {
+  position: absolute;
+  left: 0px;
   font-weight: 500;
-  color: black;
-  position: absolute;
-  top: -30px;
-  right: -25px
+  color: #fafafa;
+  background-color: rgba(25, 25, 25, 0.6);
+
 }
 
-.progress .progress-bar:after {
-  content: "";
-  display: inline-block;
-  width: 10px;
-  background: #fff;
-  position: absolute;
-  top: -10px;
-  bottom: -10px;
-  right: -5px;
-  z-index: 1;
-  transform: rotate(35deg)
+.progress-section {
+  margin: 140px 20px;
+  background-color: transparent;
+  
 }
 
 .img-fluid {
-  width:100%;
-  height:20%;
+  width: 100%;
+  height: 20%;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  
+
 }
+
 .project-link {
-  color:black;
+  color: black;
 }
+
 .img-fluid:hover {
-  transform: translateY(-50px), translatex(-50px); 
-  box-shadow: 0 15px 35px rgba(0,0,0,0.9);
+  transform: translateY(-50px), translatex(-50px);
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.9);
 }
 
 
 
 .project-link:hover {
-  color:grey;
+  color: grey;
 }
 
 #contact {
   width: 100%;
   height: 85vh;
-   
+
   background-image: url(../images/keyboard.jpg);
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
 }
+
 .box {
-    margin: auto
+  margin: auto
 }
 
 .card {
-    padding: 8%;
-    padding-top: 35px;
-    margin-top: 60px;
-    margin-bottom: 80px
+  padding: 8%;
+  padding-top: 35px;
+  margin-top: 60px;
+  margin-bottom: 80px
 }
 
 textarea[name="message"] {
-    resize: none
+  resize: none
 }
 
 #e-mail {
-    height: 45px
+  height: 45px
 }
 
 #message {
-    height: 120px
+  height: 120px
 }
 
 input.input-box,
 textarea.input-box {
-    background-color: #fff;
-    border: #616161;
-    color: #BDBDBD
+  background-color: #fff;
+  border: #616161;
+  color: #BDBDBD
 }
 
 input.input-box:focus,
 textarea.input-box:focus {
-    background-color: #F5F5F5;
-    color: #BDBDBD
+  background-color: #F5F5F5;
+  color: #BDBDBD
 }
 
 .rm-border:focus {
-    border-color: inherit;
-    -webkit-box-shadow: none;
-    box-shadow: none
+  border-color: inherit;
+  -webkit-box-shadow: none;
+  box-shadow: none
 }
 
 form .form-control::-webkit-input-placeholder {
-    color: #9E9E9E
+  color: #9E9E9E
 }
 
 ::-moz-placeholder {
-    color: #9E9E9E !important
+  color: #9E9E9E !important
 }
-
