--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Calistoga&display=swap');
 
 body {
-  font-family: 'Roboto', sans-serif;
+ font-family: 'Calistoga', cursive;
+
+  margin: 0;
+  padding: 0;
 }
 
 .transparent {
   background-color: rgba(0, 0, 0, 0.6);
+}
+
+/*---------------------------------------------Home */
+
+.fonts {
+  font-family: 'Calistoga', cursive;
 }
 
 .max-viewport {
@@ -20,9 +29,20 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-
+  
+  
 }
+.h3sd {
+  text-decoration: underline;
+}
+/*---------------------------------------------About me */
 
+.container-wrapper {
+
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+/*---------------------------------------------My skills */
 .naslov {
   color: #fff;
 }
@@ -52,6 +72,8 @@ body {
   
 }
 
+/*---------------------------------------------My projects */
+
 .img-fluid {
   width: 100%;
   height: 20%;
@@ -76,10 +98,11 @@ body {
   color: grey;
 }
 
+/*---------------------------------------------Contact me */
+
 #contact {
   width: 100%;
-  height: 85vh;
-
+  height: 95vh;
   background-image: url(../images/keyboard.jpg);
   background-position: center center;
   background-size: cover;
@@ -113,13 +136,13 @@ input.input-box,
 textarea.input-box {
   background-color: #fff;
   border: #616161;
-  color: #BDBDBD
+  color: #000;
 }
 
 input.input-box:focus,
 textarea.input-box:focus {
   background-color: #F5F5F5;
-  color: #BDBDBD
+  color: #000;
 }
 
 .rm-border:focus {
@@ -132,6 +155,10 @@ form .form-control::-webkit-input-placeholder {
   color: #9E9E9E
 }
 
-::-moz-placeholder {
-  color: #9E9E9E !important
+
+/*---------------------------------------------footer */
+
+#footer{
+  margin-bottom: 0;
+  background: fixed;
 }
